--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'io.rest-assured:rest-assured:5.3.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'io.rest-assured:json-schema-validator:4.3.1'
-    testImplementation 'com.google.code.gson:gson:2.8.6'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'com.codeborne:selenide:6.17.1'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.3'
 }
 
 test {
